### Version 1.0.0
- BusinessRelationPersonType (Changed)
    - Added new enum value "Other person mentioned by name"
- DSBPersonGroupsType (Changed)
    - removed properties "averageAgeMale" and "averageAgeFemale" (moved to OfferRequestDSBTye and OfferDSBType)
- DSBPremiumType (Changed)
    - Properties "netPremiumDSBMPercentage", "netPremiumDSBMAmount", "netPremiumDSBPPercentage", "netPremiumDSBPAmount" are no longer mandatory
    - changed type of "netPremiumDSBMalePercentage", "netPremiumDSBFemalePercentage", "netPremiumDSBMPercentage", "netPremiumDSBPPercentage" to percentageType.
- OfferDSBType (Changed)
    - added properties "averageAgeMale" and "averageAgeFemale" (moved from DSBPersonGroupsType)
- OfferRequestDSBType (Changed)
    - added properties "averageAgeMale" and "averageAgeFemale" (moved from DSBPersonGroupsType)
- ProcessVersionConstType (Changed)
    - Updated const to version number 1.0.0
- SUVACompanyType (Changed)
    - changed type of premiumOASUVA and premiumNOASUVA to PercentageType
- UVGZPremiumType (Changed)
    - Changed type from number to UVGZPremiumRateType


### Version 0.6.0
- DisabilityCapitalProgressionType (Changed)
    - removed enum value 'None'
- DSBInsuranceOptionsType (Changed)
    - renamed "renunciationBenefitReductionsNegligence" to "waiverBenefitGrossNegligence"
- DSBMCoverageType (Changed)
    - Change type from array to object
- DSBPCoverageType (Changed)
    - Change type from array to object
- DSBPersonType (Changed)
    - renamed property "fixedPayroll" to "payroll"
- OfferRequestUVGOType (Changed)
    - Renamed "personGroup" to "personGroups"
- OfferUVGOType (Changed)
    - Renamed "personGroup" to "personGroups"
    - Renamed "netPremiumUVGTotal" to "netPremiumTotal"
- OptionalPensionSalaryType (Added)
- ProcessVersionConstType (Changed)
    - adjusted const to new version number
- UVGOPersonGroupType (Changed)
    - renamed property "coverage" to "insuranceType"
- UVGOPersonPremiumType (Added)