@@ -64,27 +64,24 @@
         "type": "object",
         "properties": {
           "netPremiumDSBPercentage": {
-            "description": "Net premium rate for daily sickness benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
-            "type": "number",
-            "multipleOf": 0.001
+            "description": "Net premium rate for daily sickness benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+            "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
           },
           "netPremiumDSBAmount": {
             "description": "Fixed payroll amount in CHF",
             "$ref": "../../../../Generics/v1.0.0/MonetaryAmountType.json"
           },
           "netPremiumDSBMPercentage": {
-            "description": "Net premium rate for maternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
-            "type": "number",
-            "multipleOf": 0.001
+            "description": "Net premium rate for maternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+            "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
           },
           "netPremiumDSBMAmount": {
             "description": "Fixed payroll amount in CHF",
             "$ref": "../../../../Generics/v1.0.0/MonetaryAmountType.json"
           },
           "netPremiumDSBPPercentage": {
-            "description": "Net premium rate for paternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
-            "type": "number",
-            "multipleOf": 0.001
+            "description": "Net premium rate for paternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+            "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
           },
           "netPremiumDSBPAmount": {
             "description": "Fixed payroll amount in CHF",
